--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,7 @@ bind-key C-a send-prefix
 # set -g status-style 'bg=#333333 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
+bind-key -r t run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 set -g base-index 1
 
