set resolution on startup

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -36,6 +36,7 @@ exec --no-startup-id flameshot
 exec --no-startup-id clipit
 exec --no-startup-id pasystray
 exec --no-startup-id nm-applet
+exec --no-startup-id xrandr -s 1920x1080 -r 100
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
